syntax = "proto3";

package collect_service;

option go_package = "gen/collect_service/";

message Transaction {
	string id = 1;
	string target = 2;
	string description = 3;
	string type = 4;
	string category = 5;
	double cost = 6;
}

// Requests ----------------------------------

message GetTransactionCategoryRequest {
	Transaction ts = 1;
}

// Responses ---------------------------------

message GetTransactionCategoryResponse {
	string category = 1;
}

// Service -----------------------------------

service Collect {
	rpc GetTransactionCategory(GetTransactionCategoryRequest) returns (GetTransactionCategoryResponse);
}
